--- a/spring/src/main/resources/templates/profile_short.html
+++ b/spring/src/main/resources/templates/profile_short.html
@@ -3,5 +3,6 @@
         <img th:src="${user['picture']}" with="100" height="100" style="border-radius: 100px;"/>
         <h1 th:text="'Hello ' + ${user['name']}"></h1>
         <h2 th:text="'Your email is ' + ${user['email']}"></h2>
+        <h2 th:text="${protected}"/>
     </div>
 </th:block>
